@@ -1,3 +1,6 @@
+2007-02-23 Ian Rutt
+ * Minor change to build (restarts) in preparation for version 1.0.0 release
+
 2007-02-07 Ian Rutt
  * Fixed bug with start time consistency check... (doh)
  * Clarified comments about log-levels
